# MemePad

frontend/: .env  .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/public/icons/: Ape.jsx  Arrow.jsx  BannerRectangleBg.jsx  BgVector.jsx  BlueLines.jsx  BlueStar.jsx  CopyIcon.jsx  EllipseGreen.jsx  EllipseOutline.jsx  GroupLines.jsx  LogoPurpleText.jsx  LogoWhiteText.jsx  OogaBooga.jsx  PreSaleLive.jsx  PreSaleLiveTeal.tsx  Squigle.jsx  Star.jsx  VectorMobileView.jsx  VectorWhyMemePad.jsx  WhatIsMemePadBG.jsx
frontend/public/images/: pink.avif
frontend/public/lottiefiles/: fire.json
frontend/src/app/: Providers.tsx  (+3 more)
launchpad-dlmm/: Anchor.toml  Cargo.toml  README.md
launchpad-dlmm/tests/: presale_hub.ts
solana-contracts/Launchpad/: Anchor.toml  README.md
solana-contracts/Launchpad/programs/presale_hub/: Cargo.toml
solana-contracts/Launchpad/programs/presale_hub/src/: constants.rs  errors.rs  lib.rs  utils.rs
solana-contracts/Launchpad/programs/presale_hub/src/instructions/: add_liquidity.rs  add_liquidity_one_side.rs  buy_token_with_sol.rs  claim_token.rs  create_dlmm_pool.rs  create_lp.rs  create_presale.rs  emergency_withdraw.rs  finalize_presale.rs  initialize.rs  mod.rs  refund_base_token.rs  update_price.rs  withdraw_quote_token.rs
solana-contracts/Launchpad/programs/presale_hub/src/states/: global_state.rs  mod.rs  presale_state.rs  user_state.rs
solana-contracts/Locker/: Anchor.toml
solana-contracts/Stake/: .gitignore  Anchor.toml  Cargo.toml
solana-contracts/tests/: presale_hub.ts
(+379 files in other folders)
